# ipc-http-comparison

./: Cargo.toml  README.md  docker-compose.yml
client/: Cargo.toml  Dockerfile
client/src/: main.rs
http-service/: Cargo.toml  Dockerfile
http-service/src/: main.rs
ipc-service/: Cargo.toml  Dockerfile
ipc-service/src/: main.rs
