[workspace]
members = ["http-service", "ipc-service", "client"]

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
warp = "0.3"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
